--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DbConnection": "server=127.0.0.1;port=3306;user=unteruser;password=qwerty12345;database=notes_identity_db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
